Update depencencies to support Minecraft 1.21.4